--- a/.github/workflows/inc-counter.yml
+++ b/.github/workflows/inc-counter.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_ACTION_PAT }}
           branch: refs/heads/github.actions/inc-counter
           force: true
