Remove branch condition for print-counter

--- a/.github/workflows/print-counter.yml
+++ b/.github/workflows/print-counter.yml
@@ -2,8 +2,8 @@ name: Print Counter
 
 on:
   push:
-    branches:
-      - "github.actions/inc-counter"
+    # branches:
+    #   - github.actions/inc-counter
 
 jobs:
   build:
