--- a/.github/workflows/inc-counter.yml
+++ b/.github/workflows/inc-counter.yml
@@ -13,13 +13,13 @@ jobs:
           ref: master
       - name: increment counter
         run: |
-          git config --local user.email "example@example.com"
-          git config --local user.name "GitHub Action"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           echo $(($(cat counter) + 1)) > counter
           git commit -m "increment counter" counter
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GH_ACTION_PAT }}
-          branch: refs/heads/github.actions/inc-counter
+          branch: refs/heads/github-actions/inc-counter
           force: true
